--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -46,13 +46,13 @@
   box-sizing: border-box;
   transition: opacity 0.5s ease-in-out;
 }
-.tps-tooltip.active::before {
+.tps-tooltip__active::before {
   content: "?";
   background-color: #0078c2;
   color: #fff;
   border-radius: 50%;
 }
-.tps-tooltip.active .tps-tooltip__text {
+.tps-tooltip__active .tps-tooltip__text {
   visibility: visible;
   opacity: 1;
 }
@@ -96,7 +96,7 @@
   position: absolute;
   top: 100%;
   left: 92%;
-  margin-left: -5px;
+  margin-left: -2px;
   border-width: 5px;
   border-style: solid;
   border-color: #0078c2 transparent transparent transparent;
