--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -35,12 +35,19 @@
 .tps-tooltip__text {
   visibility: hidden;
   position: absolute;
+  display: flex !important;
   width: 225px;
+  font-family: "Roboto";
+  font-style: normal;
   background-color: #0078c2 !important;
   color: #fff !important;
   text-align: justify !important;
-  padding: 5px 5px !important;
+  padding: 8px !important;
   border-radius: 6px !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 16px !important;
+  align-items: center !important;
   z-index: 1;
   opacity: 0;
   box-sizing: border-box;
@@ -109,9 +116,8 @@
 .tps-tooltip--left:after {
   content: "";
   position: absolute;
-  top: 20%;
+  top: 8px;
   left: 100%;
-  margin-top: -10px;
   border-width: 5px;
   border-style: solid;
   border-color: transparent transparent transparent #0078c2;
