--- a/src/scss/tooltip.scss
+++ b/src/scss/tooltip.scss
@@ -37,12 +37,19 @@
   &__text {
     visibility: hidden;
     position: absolute;
+    display: flex !important;
     width: 225px;
+    font-family: "Roboto";
+    font-style: normal;
     background-color: #0078c2 !important;
     color: #fff !important;
     text-align: justify !important;
-    padding: 5px 5px !important;
+    padding: 8px !important;
     border-radius: 6px !important;
+    font-weight: 400 !important;
+    font-size: 14px !important;
+    line-height: 16px !important;
+    align-items: center !important;
     z-index: 1;
     opacity: 0;
     box-sizing: border-box;
@@ -64,6 +71,7 @@
   &--right {
     top: -8px;
     left: 125%;
+
     &:after {
       content: "";
       position: absolute;
@@ -81,6 +89,7 @@
     top: 140%;
     left: 50%;
     margin-left: -60px;
+
     &:after {
       content: "";
       position: absolute;
@@ -97,6 +106,7 @@
     bottom: 200%;
     left: 60%;
     margin-left: -300px;
+
     &:after {
       content: "";
       position: absolute;
@@ -113,12 +123,13 @@
     top: 0;
     bottom: auto;
     left: -100%;
+
     &:after {
       content: "";
       position: absolute;
-      top: 20%;
+      top: 8px;
       left: 100%;
-      margin-top: -10px;
+      // margin-top: -10px;
       border-width: 5px;
       border-style: solid;
       border-color: transparent transparent transparent #0078c2;
