--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -1,3 +1,6 @@
+/* Extra small devices (phones, 600px and down) */
+/* Medium devices (landscape tablets, 768px and up) */
+/* Large devices (laptops/desktops, 992px and up) */
 .tps-tooltip {
   position: absolute !important;
   border: 1px solid #0078c2 !important;
@@ -63,25 +66,7 @@
   visibility: visible;
   opacity: 1;
 }
-@media screen and (max-width: 576px) {
-  .tps-tooltip__active .tps-tooltip__text {
-    width: 265px;
-    bottom: 200%;
-    left: 60%;
-    margin-left: -300px;
-  }
-  .tps-tooltip__active .tps-tooltip__text:after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 92%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #0078c2 transparent transparent transparent;
-  }
-}
-@media screen and (max-width: 658px) {
+@media screen and (max-width: 600px) {
   .tps-tooltip__active .tps-tooltip__text {
     width: 265px;
     bottom: 200%;
@@ -99,7 +84,25 @@
     border-color: #0078c2 transparent transparent transparent;
   }
 }
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 600px) {
+  .tps-tooltip__active .tps-tooltip__text {
+    width: 265px;
+    bottom: 200%;
+    left: 60%;
+    margin-left: -250px;
+  }
+  .tps-tooltip__active .tps-tooltip__text:after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 92%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #0078c2 transparent transparent transparent;
+  }
+}
+@media screen and (min-width: 768px) {
   .tps-tooltip__active .tps-tooltip__text {
     width: 260px;
     bottom: 200%;
