--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -1,11 +1,11 @@
 /* Extra small devices (phones, 600px and down) */
+/* Extra small devices (phones, 600px and down) */
 /* Medium devices (landscape tablets, 768px and up) */
 /* Large devices (laptops/desktops, 992px and up) */
 .tps-tooltip {
   position: absolute !important;
   border: 1px solid #0078c2 !important;
   display: flex !important;
-  align-items: center !important;
   justify-content: center !important;
   align-items: center !important;
   line-height: 15px !important;
@@ -15,7 +15,6 @@
   height: 18px;
   width: 18px;
   border-radius: 50%;
-  background-color: #fff;
   box-sizing: border-box;
 }
 .tps-tooltip:hover {
@@ -30,31 +29,11 @@
   height: 18px;
   width: 18px;
   display: flex;
-  align-items: center;
   justify-content: center;
   align-items: center;
   line-height: 15px;
-}
-.tps-tooltip__text {
-  visibility: hidden;
-  position: absolute;
-  display: flex !important;
-  width: 225px;
-  font-family: "Roboto";
-  font-style: normal;
-  background-color: #0078c2 !important;
-  color: #fff !important;
-  text-align: justify !important;
-  padding: 8px !important;
-  border-radius: 6px !important;
-  font-weight: 400 !important;
-  font-size: 14px !important;
-  line-height: 16px !important;
-  align-items: center !important;
-  z-index: 1;
-  opacity: 0;
+  border-radius: 50%;
   box-sizing: border-box;
-  transition: opacity 0.5s ease-in-out;
 }
 .tps-tooltip__active::before {
   content: "?";
@@ -66,18 +45,57 @@
   visibility: visible;
   opacity: 1;
 }
-@media screen and (max-width: 600px) {
-  .tps-tooltip__active .tps-tooltip__text {
-    width: 265px;
-    bottom: 200%;
-    left: 60%;
-    margin-left: -250px;
+
+.tps-tooltip-text {
+  font-family: "Roboto";
+  font-style: normal;
+  background-color: #0078c2 !important;
+  color: #fff !important;
+  text-align: justify !important;
+  padding: 8px !important;
+  border-radius: 6px !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 16px !important;
+  align-items: center !important;
+  box-sizing: border-box;
+  transition: opacity 0.5s ease-in-out;
+  visibility: hidden;
+  position: absolute;
+  display: flex !important;
+  z-index: 1;
+}
+@media screen and (min-width: 375px) {
+  .tps-tooltip-text {
+    top: -10px !important;
+    right: 0 !important;
+    width: 160px;
+    transform: translateY(-100%);
   }
-  .tps-tooltip__active .tps-tooltip__text:after {
+  .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 92%;
+    left: 88%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #0078c2 transparent transparent transparent;
+  }
+}
+@media screen and (max-width: 375px) {
+  .tps-tooltip-text {
+    top: -10px !important;
+    right: 0 !important;
+    width: 160px;
+    transform: translateY(-100%);
+    width: 160px;
+  }
+  .tps-tooltip-text:after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 88%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
@@ -85,17 +103,18 @@
   }
 }
 @media screen and (min-width: 600px) {
-  .tps-tooltip__active .tps-tooltip__text {
-    width: 265px;
-    bottom: 200%;
-    left: 60%;
-    margin-left: -250px;
+  .tps-tooltip-text {
+    top: -10px !important;
+    right: 0 !important;
+    width: 190px;
+    transform: translateY(-100%);
+    width: 175px;
   }
-  .tps-tooltip__active .tps-tooltip__text:after {
+  .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 92%;
+    left: 90%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
@@ -103,17 +122,17 @@
   }
 }
 @media screen and (min-width: 768px) {
-  .tps-tooltip__active .tps-tooltip__text {
-    width: 260px;
-    bottom: 200%;
-    left: 60%;
-    margin-left: -250px;
+  .tps-tooltip-text {
+    top: -10px !important;
+    right: 0 !important;
+    width: 190px;
+    transform: translateY(-100%);
   }
-  .tps-tooltip__active .tps-tooltip__text:after {
+  .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 92%;
+    left: 90%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
@@ -121,17 +140,17 @@
   }
 }
 @media screen and (min-width: 992px) {
-  .tps-tooltip__active .tps-tooltip__text {
-    width: 265px;
-    bottom: 200%;
-    left: 60%;
-    margin-left: -250px;
+  .tps-tooltip-text {
+    top: -10px !important;
+    right: 0 !important;
+    width: 190px;
+    transform: translateY(-100%);
   }
-  .tps-tooltip__active .tps-tooltip__text:after {
+  .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 92%;
+    left: 90%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
@@ -139,19 +158,23 @@
   }
 }
 @media screen and (min-width: 1366px) {
-  .tps-tooltip__active .tps-tooltip__text {
+  .tps-tooltip-text {
+    top: 0 !important;
+    right: 105% !important;
     width: 225px;
-    top: -5px !important;
-    bottom: auto;
-    left: -340px;
+    transform: translateY(-10%);
   }
-  .tps-tooltip__active .tps-tooltip__text:after {
+  .tps-tooltip-text:after {
     content: "";
     position: absolute;
-    top: 5%;
+    top: 1px;
     left: 100%;
     border-width: 10px;
     border-style: solid;
     border-color: transparent transparent transparent #0078c2;
   }
+}
+.tps-tooltip-text__active {
+  visibility: visible;
+  opacity: 1;
 }/*# sourceMappingURL=tooltip.css.map */
