--- a/src/scss/tooltip.scss
+++ b/src/scss/tooltip.scss
@@ -1,4 +1,7 @@
 /* Extra small devices (phones, 600px and down) */
+$screen-xs-min: 375px;
+
+/* Extra small devices (phones, 600px and down) */
 $screen-sm-min: 600px;
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -14,7 +17,6 @@ $screen-xl-min: 1366px;
   position: absolute !important;
   border: 1px solid #0078c2 !important;
   display: flex !important;
-  align-items: center !important;
   justify-content: center !important;
   align-items: center !important;
   line-height: 15px !important;
@@ -24,7 +26,6 @@ $screen-xl-min: 1366px;
   height: 18px;
   width: 18px;
   border-radius: 50%;
-  background-color: #fff;
   box-sizing: border-box;
 
   &:hover {
@@ -40,32 +41,11 @@ $screen-xl-min: 1366px;
     height: 18px;
     width: 18px;
     display: flex;
-    align-items: center;
     justify-content: center;
     align-items: center;
     line-height: 15px;
-  }
-
-  &__text {
-    visibility: hidden;
-    position: absolute;
-    display: flex !important;
-    width: 225px;
-    font-family: "Roboto";
-    font-style: normal;
-    background-color: #0078c2 !important;
-    color: #fff !important;
-    text-align: justify !important;
-    padding: 8px !important;
-    border-radius: 6px !important;
-    font-weight: 400 !important;
-    font-size: 14px !important;
-    line-height: 16px !important;
-    align-items: center !important;
-    z-index: 1;
-    opacity: 0;
+    border-radius: 50%;
     box-sizing: border-box;
-    transition: opacity 0.5s ease-in-out;
   }
 
   &__active::before {
@@ -78,88 +58,140 @@ $screen-xl-min: 1366px;
   &__active &__text {
     visibility: visible;
     opacity: 1;
+  }
+}
 
-    @media screen and (max-width: $screen-sm-min) {
-      width: 265px;
-      bottom: 200%;
-      left: 60%;
-      margin-left: -250px;
-      &:after {
-        content: "";
-        position: absolute;
-        top: 100%;
-        left: 92%;
-        margin-left: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: #0078c2 transparent transparent transparent;
-      }
-    }
+.tps-tooltip-text {
+  font-family: "Roboto";
+  font-style: normal;
+  background-color: #0078c2 !important;
+  color: #fff !important;
+  text-align: justify !important;
+  padding: 8px !important;
+  border-radius: 6px !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 16px !important;
+  align-items: center !important;
+  box-sizing: border-box;
+  transition: opacity 0.5s ease-in-out;
+  visibility: hidden;
+  position: absolute;
+  display: flex !important;
+  z-index: 1;
 
-    @media screen and (min-width: $screen-sm-min) {
-      width: 265px;
-      bottom: 200%;
-      left: 60%;
-      margin-left: -250px;
-      &:after {
-        content: "";
-        position: absolute;
-        top: 100%;
-        left: 92%;
-        margin-left: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: #0078c2 transparent transparent transparent;
-      }
-    }
-    @media screen and (min-width: $screen-md-min) {
-      width: 260px;
-      bottom: 200%;
-      left: 60%;
-      margin-left: -250px;
-      &:after {
-        content: "";
-        position: absolute;
-        top: 100%;
-        left: 92%;
-        margin-left: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: #0078c2 transparent transparent transparent;
-      }
-    }
+  @media screen and (min-width: $screen-xs-min) {
+    top: -10px !important;
+    right: 0 !important;
+    width: 160px;
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
 
-    @media screen and (min-width: $screen-lg-min) {
-      width: 265px;
-      bottom: 200%;
-      left: 60%;
-      margin-left: -250px;
-      &:after {
-        content: "";
-        position: absolute;
-        top: 100%;
-        left: 92%;
-        margin-left: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: #0078c2 transparent transparent transparent;
-      }
+    &:after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 88%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: #0078c2 transparent transparent transparent;
     }
+  }
 
-    @media screen and (min-width: $screen-xl-min) {
-      width: 225px;
-      top: -5px !important;
-      bottom: auto;
-      left: -340px;
-      &:after {
-        content: "";
-        position: absolute;
-        top: 5%;
-        left: 100%;
-        border-width: 10px;
-        border-style: solid;
-        border-color: transparent transparent transparent #0078c2;
-      }
+  @media screen and (max-width: $screen-xs-min) {
+    top: -10px !important;
+    right: 0 !important;
+    width: 160px;
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+
+    width: 160px;
+    &:after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 88%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: #0078c2 transparent transparent transparent;
     }
+  }
+  @media screen and (min-width: $screen-sm-min) {
+    top: -10px !important;
+    right: 0 !important;
+    width: 190px;
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+
+    width: 175px;
+    &:after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 90%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: #0078c2 transparent transparent transparent;
+    }
+  }
+  @media screen and (min-width: $screen-md-min) {
+    top: -10px !important;
+    right: 0 !important;
+    width: 190px;
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 90%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: #0078c2 transparent transparent transparent;
+    }
+  }
+  @media screen and (min-width: $screen-lg-min) {
+    top: -10px !important;
+    right: 0 !important;
+    width: 190px;
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 90%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: #0078c2 transparent transparent transparent;
+    }
+  }
+  @media screen and (min-width: $screen-xl-min) {
+    top: 0 !important;
+    right: 105% !important;
+    width: 225px;
+    -webkit-transform: translateY(-10%);
+    transform: translateY(-10%);
+    &:after {
+      content: "";
+      position: absolute;
+      top: 1px;
+      left: 100%;
+      border-width: 10px;
+      border-style: solid;
+      border-color: transparent transparent transparent #0078c2;
+    }
+  }
+
+  &__active {
+    visibility: visible;
+    opacity: 1;
   }
 }
