--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -2,6 +2,16 @@
 /* Extra small devices (phones, 600px and down) */
 /* Medium devices (landscape tablets, 768px and up) */
 /* Large devices (laptops/desktops, 992px and up) */
+div.tps-tooltip-text {
+  font-size: 14px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
 .tps-tooltip {
   position: absolute !important;
   border: 1px solid #0078c2 !important;
@@ -51,18 +61,17 @@
   font-style: normal;
   background-color: #0078c2 !important;
   color: #fff !important;
-  text-align: justify !important;
-  padding: 8px !important;
   border-radius: 6px !important;
   font-weight: 400 !important;
   font-size: 14px !important;
-  line-height: 16px !important;
+  line-height: 16.41px !important;
   align-items: center !important;
-  box-sizing: border-box;
   transition: opacity 0.5s ease-in-out;
   visibility: hidden;
   position: absolute;
   display: flex !important;
+  box-shadow: gray 1px 1px 1px;
+  filter: blur(4);
   z-index: 1;
 }
 @media screen and (min-width: 375px) {
@@ -70,6 +79,7 @@
     top: -10px !important;
     right: 0 !important;
     width: 160px;
+    padding: 7px 7px 10px 11px !important;
     transform: translateY(-100%);
   }
   .tps-tooltip-text:after {
@@ -88,6 +98,7 @@
     top: -10px !important;
     right: 0 !important;
     width: 160px;
+    padding: 7px 7px 10px 11px !important;
     transform: translateY(-100%);
     width: 160px;
   }
@@ -107,6 +118,7 @@
     top: -10px !important;
     right: 0 !important;
     width: 190px;
+    padding: 7px 7px 10px 11px !important;
     transform: translateY(-100%);
     width: 175px;
   }
@@ -125,7 +137,9 @@
   .tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
-    width: 190px;
+    height: 24px;
+    width: 201px;
+    padding: 7px 7px 7px 11px !important;
     transform: translateY(-100%);
   }
   .tps-tooltip-text:after {
@@ -143,7 +157,8 @@
   .tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
-    width: 190px;
+    width: 201px;
+    padding: 7px 7px 10px 11px !important;
     transform: translateY(-100%);
   }
   .tps-tooltip-text:after {
@@ -151,7 +166,7 @@
     position: absolute;
     top: 100%;
     left: 90%;
-    margin-left: -5px;
+    margin-left: -3px;
     border-width: 5px;
     border-style: solid;
     border-color: #0078c2 transparent transparent transparent;
@@ -160,18 +175,24 @@
 @media screen and (min-width: 1366px) {
   .tps-tooltip-text {
     top: 0 !important;
+    min-height: 81px;
     right: 105% !important;
-    width: 225px;
+    width: 178px;
+    padding: 7px 7px 7px 18px !important;
     transform: translateY(-10%);
   }
   .tps-tooltip-text:after {
     content: "";
     position: absolute;
-    top: 1px;
-    left: 100%;
-    border-width: 10px;
-    border-style: solid;
-    border-color: transparent transparent transparent #0078c2;
+    box-sizing: border-box;
+    background-color: #0078c2;
+    height: 11px;
+    width: 13px;
+    left: 199px;
+    top: 12px;
+    transform: translateY(8%);
+    border-radius: 1px;
+    transform: rotate(-45deg);
   }
 }
 .tps-tooltip-text__active {
