--- a/src/scss/tooltip.scss
+++ b/src/scss/tooltip.scss
@@ -13,6 +13,16 @@ $screen-lg-min: 992px;
 // Large tablets and desktops
 $screen-xl-min: 1366px;
 
+div.tps-tooltip-text {
+  font-size: 14px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
 .tps-tooltip {
   position: absolute !important;
   border: 1px solid #0078c2 !important;
@@ -66,24 +76,24 @@ $screen-xl-min: 1366px;
   font-style: normal;
   background-color: #0078c2 !important;
   color: #fff !important;
-  text-align: justify !important;
-  padding: 8px !important;
   border-radius: 6px !important;
   font-weight: 400 !important;
   font-size: 14px !important;
-  line-height: 16px !important;
+  line-height: 16.41px !important;
   align-items: center !important;
-  box-sizing: border-box;
   transition: opacity 0.5s ease-in-out;
   visibility: hidden;
   position: absolute;
   display: flex !important;
+  box-shadow: gray 1px 1px 1px;
+  filter: blur(4);
   z-index: 1;
 
   @media screen and (min-width: $screen-xs-min) {
     top: -10px !important;
     right: 0 !important;
     width: 160px;
+    padding: 7px 7px 10px 11px !important;
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
 
@@ -103,6 +113,8 @@ $screen-xl-min: 1366px;
     top: -10px !important;
     right: 0 !important;
     width: 160px;
+    padding: 7px 7px 10px 11px !important;
+
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
 
@@ -122,6 +134,8 @@ $screen-xl-min: 1366px;
     top: -10px !important;
     right: 0 !important;
     width: 190px;
+    padding: 7px 7px 10px 11px !important;
+
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
 
@@ -140,7 +154,10 @@ $screen-xl-min: 1366px;
   @media screen and (min-width: $screen-md-min) {
     top: -10px !important;
     right: 0 !important;
-    width: 190px;
+    height: 24px;
+    width: 201px;
+    padding: 7px 7px 7px 11px !important;
+
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
 
@@ -158,7 +175,9 @@ $screen-xl-min: 1366px;
   @media screen and (min-width: $screen-lg-min) {
     top: -10px !important;
     right: 0 !important;
-    width: 190px;
+    width: 201px;
+    padding: 7px 7px 10px 11px !important;
+
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
 
@@ -167,7 +186,7 @@ $screen-xl-min: 1366px;
       position: absolute;
       top: 100%;
       left: 90%;
-      margin-left: -5px;
+      margin-left: -3px;
       border-width: 5px;
       border-style: solid;
       border-color: #0078c2 transparent transparent transparent;
@@ -175,18 +194,24 @@ $screen-xl-min: 1366px;
   }
   @media screen and (min-width: $screen-xl-min) {
     top: 0 !important;
+    min-height: 81px;
     right: 105% !important;
-    width: 225px;
+    width: 178px;
+    padding: 7px 7px 7px 18px !important;
     -webkit-transform: translateY(-10%);
     transform: translateY(-10%);
     &:after {
       content: "";
       position: absolute;
-      top: 1px;
-      left: 100%;
-      border-width: 10px;
-      border-style: solid;
-      border-color: transparent transparent transparent #0078c2;
+      box-sizing: border-box;
+      background-color: #0078c2;
+      height: 11px;
+      width: 13px;
+      left: 199px;
+      top: 12px;
+      transform: translateY(8%);
+      border-radius: 1px;
+      transform: rotate(-45deg);
     }
   }
 
