--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -13,43 +13,38 @@ div.tps-tooltip-text {
 }
 
 .tps-tooltip {
-  position: absolute !important;
-  border: 1px solid #0078c2 !important;
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
-  line-height: 15px !important;
-  color: #0078c2 !important;
-  top: 0;
-  right: 10px;
   height: 18px;
   width: 18px;
   border-radius: 50%;
+  border: 1.5px solid #0078c2;
+  position: absolute;
+  background-color: #0078c2;
+  text-align: center;
+  top: 0;
+  right: 10px;
+  background-color: #fff;
   box-sizing: border-box;
 }
 .tps-tooltip:hover {
-  background-color: #dbf1ff;
+  background: #c8e1f0;
 }
 .tps-tooltip:before {
   content: "?";
-  font-size: 13px;
-  font-weight: bold;
-  color: #0078c2;
+  display: inline-block;
+  width: 100%;
   text-align: center;
-  height: 18px;
-  width: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  line-height: 15px;
-  border-radius: 50%;
-  box-sizing: border-box;
+  font-weight: 700;
+  color: #0078c2;
 }
 .tps-tooltip__active::before {
   content: "?";
-  background-color: #0078c2;
   color: #fff;
-  border-radius: 50%;
+}
+.tps-tooltip__active {
+  background-color: #0078c2;
+}
+.tps-tooltip__active:hover {
+  background-color: #0078c2;
 }
 .tps-tooltip__active .tps-tooltip__text {
   visibility: visible;
@@ -78,7 +73,10 @@ div.tps-tooltip-text {
   .tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
-    width: 160px;
+    width: 219px;
+    min-width: 160px;
+    min-height: 41px;
+    box-sizing: border-box;
     padding: 7px 7px 10px 11px !important;
     transform: translateY(-100%);
   }
@@ -86,7 +84,7 @@ div.tps-tooltip-text {
     content: "";
     position: absolute;
     top: 100%;
-    left: 88%;
+    left: 91%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
@@ -97,16 +95,18 @@ div.tps-tooltip-text {
   .tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
-    width: 160px;
     padding: 7px 7px 10px 11px !important;
+    width: 219px;
+    min-width: 160px;
+    min-height: 41px;
+    box-sizing: border-box;
     transform: translateY(-100%);
-    width: 160px;
   }
   .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 88%;
+    left: 91%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
@@ -117,10 +117,12 @@ div.tps-tooltip-text {
   .tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
-    width: 190px;
+    min-width: 160px;
+    width: 219px;
+    box-sizing: border-box;
+    min-height: 41px;
     padding: 7px 7px 10px 11px !important;
     transform: translateY(-100%);
-    width: 175px;
   }
   .tps-tooltip-text:after {
     content: "";
@@ -137,16 +139,17 @@ div.tps-tooltip-text {
   .tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
-    height: 24px;
-    width: 201px;
+    width: 219px;
     padding: 7px 7px 7px 11px !important;
+    min-height: 41px;
+    box-sizing: border-box;
     transform: translateY(-100%);
   }
   .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 90%;
+    left: 91%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
@@ -157,9 +160,11 @@ div.tps-tooltip-text {
   .tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
-    width: 201px;
+    width: 219px;
     padding: 7px 7px 10px 11px !important;
+    min-width: 160px;
     transform: translateY(-100%);
+    min-height: 41px;
   }
   .tps-tooltip-text:after {
     content: "";
@@ -198,4 +203,13 @@ div.tps-tooltip-text {
 .tps-tooltip-text__active {
   visibility: visible;
   opacity: 1;
+}
+.tps-tooltip-text__shrink {
+  width: 170px;
+}
+.tps-tooltip-text__shrink:after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 87%;
 }/*# sourceMappingURL=tooltip.css.map */
