--- a/src/scss/tooltip.scss
+++ b/src/scss/tooltip.scss
@@ -207,7 +207,7 @@ div.tps-tooltip-text {
       background-color: #0078c2;
       height: 11px;
       width: 13px;
-      left: 199px;
+      left: 98%;
       top: 12px;
       transform: translateY(8%);
       border-radius: 1px;
