--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -21,7 +21,7 @@ div.tps-tooltip-text {
   background-color: #0078c2;
   text-align: center;
   top: 0;
-  right: 10px;
+  right: 0px;
   background-color: #fff;
   box-sizing: border-box;
 }
@@ -60,6 +60,8 @@ div.tps-tooltip-text {
   font-weight: 400 !important;
   font-size: 14px !important;
   line-height: 16.41px !important;
+  padding-top: 14px;
+  padding-bottom: 16px;
   align-items: center !important;
   transition: opacity 0.5s ease-in-out;
   visibility: hidden;
@@ -78,14 +80,14 @@ div.tps-tooltip-text {
     min-height: 41px;
     box-sizing: border-box;
     padding: 7px 7px 10px 11px !important;
-    transform: translateY(-100%);
+    transform: translateY(-114%);
   }
   .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 91%;
-    margin-left: -5px;
+    left: 100%;
+    margin-left: -15px;
     border-width: 5px;
     border-style: solid;
     border-color: #0078c2 transparent transparent transparent;
@@ -100,14 +102,14 @@ div.tps-tooltip-text {
     min-width: 160px;
     min-height: 41px;
     box-sizing: border-box;
-    transform: translateY(-100%);
+    transform: translateY(-114%);
   }
   .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 91%;
-    margin-left: -5px;
+    left: 100%;
+    margin-left: -15px;
     border-width: 5px;
     border-style: solid;
     border-color: #0078c2 transparent transparent transparent;
@@ -122,14 +124,14 @@ div.tps-tooltip-text {
     box-sizing: border-box;
     min-height: 41px;
     padding: 7px 7px 10px 11px !important;
-    transform: translateY(-100%);
+    transform: translateY(-114%);
   }
   .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 90%;
-    margin-left: -5px;
+    left: 100%;
+    margin-left: -15px;
     border-width: 5px;
     border-style: solid;
     border-color: #0078c2 transparent transparent transparent;
@@ -143,14 +145,14 @@ div.tps-tooltip-text {
     padding: 7px 7px 7px 11px !important;
     min-height: 41px;
     box-sizing: border-box;
-    transform: translateY(-100%);
+    transform: translateY(-114%);
   }
   .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 91%;
-    margin-left: -5px;
+    left: 100%;
+    margin-left: -15px;
     border-width: 5px;
     border-style: solid;
     border-color: #0078c2 transparent transparent transparent;
@@ -163,15 +165,15 @@ div.tps-tooltip-text {
     width: 219px;
     padding: 7px 7px 10px 11px !important;
     min-width: 160px;
-    transform: translateY(-100%);
+    transform: translateY(-114%);
     min-height: 41px;
   }
   .tps-tooltip-text:after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 90%;
-    margin-left: -3px;
+    left: 100%;
+    margin-left: -15px;
     border-width: 5px;
     border-style: solid;
     border-color: #0078c2 transparent transparent transparent;
@@ -211,5 +213,5 @@ div.tps-tooltip-text {
   content: "";
   position: absolute;
   top: 100%;
-  left: 87%;
+  left: 100%;
 }/*# sourceMappingURL=tooltip.css.map */
