--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -3,57 +3,57 @@
 /* Medium devices (landscape tablets, 768px and up) */
 /* Large devices (laptops/desktops, 992px and up) */
 div.tps-tooltip-text {
-  font-size: 14px;
-  font-family: Roboto;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 16px;
-  letter-spacing: 0em;
-  text-align: left;
+  font-size: 14px !important;
+  font-family: Roboto !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 16px !important;
+  letter-spacing: 0em !important;
+  text-align: left !important;
 }
 
 .tps-tooltip {
-  height: 18px;
-  width: 18px;
-  border-radius: 50%;
-  border: 1.5px solid #0078c2;
-  position: absolute;
-  background-color: #0078c2;
-  text-align: center;
-  top: 0;
-  right: 0px;
-  background-color: #fff;
-  box-sizing: border-box;
+  height: 18px !important;
+  width: 18px !important;
+  border-radius: 50% !important;
+  border: 1.5px solid #0078c2 !important;
+  position: absolute !important;
+  background-color: #0078c2 !important;
+  text-align: center !important;
+  top: 0 !important;
+  right: 0px !important;
+  background-color: #fff !important;
+  box-sizing: border-box !important;
 }
 .tps-tooltip:hover {
-  background: #c8e1f0;
+  background: #c8e1f0 !important;
 }
 .tps-tooltip:before {
-  content: "?";
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  font-weight: 700;
-  color: #0078c2;
+  content: "?" !important;
+  display: inline-block !important;
+  width: 100% !important;
+  text-align: center !important;
+  font-weight: 700 !important;
+  color: #0078c2 !important;
 }
 .tps-tooltip__active::before {
-  content: "?";
-  color: #fff;
+  content: "?" !important;
+  color: #fff !important;
 }
 .tps-tooltip__active {
-  background-color: #0078c2;
+  background-color: #0078c2 !important;
 }
 .tps-tooltip__active:hover {
-  background-color: #0078c2;
+  background-color: #0078c2 !important;
 }
 .tps-tooltip__active .tps-tooltip__text {
-  visibility: visible;
-  opacity: 1;
+  visibility: visible !important;
+  opacity: 1 !important;
 }
 
 .tps-tooltip-text {
-  font-family: "Roboto";
-  font-style: normal;
+  font-family: "Roboto" !important;
+  font-style: normal !important;
   background-color: #0078c2 !important;
   color: #fff !important;
   border-radius: 6px !important;
