--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -62,10 +62,8 @@ div.tps-tooltip-text {
   font-weight: 400 !important;
   font-size: 14px !important;
   line-height: 16.41px !important;
-  padding-top: 14px;
-  padding-bottom: 16px;
   align-items: center !important;
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
   visibility: hidden;
   position: absolute;
   display: flex !important;
@@ -81,7 +79,7 @@ div.tps-tooltip-text {
     min-width: 160px;
     min-height: 41px;
     box-sizing: border-box;
-    padding: 7px 7px 10px 11px !important;
+    padding: 14px 16px 11px 12px !important;
     transform: translateY(-114%);
   }
   .tps-tooltip-text:after {
@@ -99,7 +97,7 @@ div.tps-tooltip-text {
   .tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
-    padding: 7px 7px 10px 11px !important;
+    padding: 14px 16px 11px 12px !important;
     width: 219px;
     min-width: 160px;
     min-height: 41px;
@@ -125,7 +123,7 @@ div.tps-tooltip-text {
     width: 219px;
     box-sizing: border-box;
     min-height: 41px;
-    padding: 7px 7px 10px 11px !important;
+    padding: 14px 16px 11px 12px !important;
     transform: translateY(-114%);
   }
   .tps-tooltip-text:after {
@@ -144,7 +142,7 @@ div.tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
     width: 219px;
-    padding: 7px 7px 7px 11px !important;
+    padding: 14px 16px 11px 12px !important;
     min-height: 41px;
     box-sizing: border-box;
     transform: translateY(-114%);
@@ -165,7 +163,7 @@ div.tps-tooltip-text {
     top: -10px !important;
     right: 0 !important;
     width: 219px;
-    padding: 7px 7px 10px 11px !important;
+    padding: 14px 16px 11px 12px !important;
     min-width: 160px;
     transform: translateY(-114%);
     min-height: 41px;
@@ -184,24 +182,24 @@ div.tps-tooltip-text {
 @media screen and (min-width: 1366px) {
   .tps-tooltip-text {
     top: 0 !important;
-    min-height: 81px;
-    right: 105% !important;
+    right: 110% !important;
     width: 178px;
-    padding: 7px 7px 7px 18px !important;
+    padding: 18px 11px 12px 17px !important;
     transform: translateY(-10%);
   }
   .tps-tooltip-text:after {
     content: "";
+    color: transparent;
     position: absolute;
-    box-sizing: border-box;
-    background-color: #0078c2;
-    height: 11px;
-    width: 13px;
-    left: 105%;
-    top: 12px;
-    transform: translateY(8%);
-    border-radius: 1px;
-    transform: rotate(-45deg);
+    left: 97%;
+    top: 0px;
+    border-radius: 2px;
+    transform: rotate(155deg);
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 15px solid #0078c2;
   }
 }
 .tps-tooltip-text__active {
