--- a/src/scss/tooltip.scss
+++ b/src/scss/tooltip.scss
@@ -198,7 +198,7 @@ div.tps-tooltip-text {
   @media screen and (min-width: $screen-xl-min) {
     top: 0 !important;
     // min-height: 81px;
-    right: 110% !important;
+    right: calc(100% + 20px) !important;
     width: 178px;
     padding: 18px 11px 12px 17px !important; // (top, right, bottom, and left).
     -webkit-transform: translateY(-10%);
