--- a/src/scss/tooltip.scss
+++ b/src/scss/tooltip.scss
@@ -26,41 +26,17 @@ div.tps-tooltip-text {
 .tps-tooltip {
   height: 18px;
   width: 18px;
-  border-radius: 50%;
-  border: 1.5px solid #0078c2;
   position: absolute;
-  text-align: center;
   top: 0;
   right: 0;
-  background-color: #fff;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-image: url(../svg/inactive.svg);
 
   &:hover {
-    background: #c8e1f0;
-  }
-
-  &:before {
-    content: "\003F";
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    font-weight: 700;
-    color: #0078c2;
-  }
-
-  &__active::before {
-    content: "\003F";
-    color: #fff;
+    background-image: url(../svg/hovered.svg);
   }
 
   &__active {
-    background-color: #0078c2;
-    &:hover {
-      background-color: #0078c2;
-    }
+    background-image: url(../svg/active.svg);
   }
 
   &__active &__text {
